backend/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-app
  labels:
    app: library-app
spec:
  replicas: 2
  revisionHistoryLimit: 5

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1

  selector:
    matchLabels:
      app: library-app

  template:
    metadata:
      labels:
        app: library-app
    spec:
      terminationGracePeriodSeconds: 30

      containers:
        - name: library-app
          image: harshavardhan303/library-manager-backend:1
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "300m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /Homepage.jsp
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5

          livenessProbe:
            httpGet:
              path: /Homepage.jsp
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 5
