backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-app
  labels:
    app: library-app
spec:
  type: ClusterIP

  selector:
    app: library-app

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
