backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-manager-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: harshavardhan.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: library-app
                port:
                  number: 80
